--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <body style="background:brown">
         <h1 style="color:black; background:burlywood">Gabe Seabaugh</h1>
         <p style="color:white; background:green">I am a 26-year-old <b>veteran of the U.S. Navy</b> hailing from <i>Mohave Valley, Arizona.</i> I'm married with a <sup>one-year-old daughter,</sup> and I currently work in <sub>Private Security.</sub> I have had an interest in coding since high-school, and I am excited to have the opportunity to learn it while <mark>taking advantage of the G.I. Bill.</mark></p>
+
+        <p style="color:brown; background:cornflowerblue">I was a <b>Hospital Corpsman</b> for 5 years, three of which having been spent stationed in <mark>Okinawa, Japan.</mark> I spent my time working for clinics and providing medical supervision to the Marines I was stationed with. My last year was spent taking care of the medical needs of the recruits sent to <i>Marine Corps Recruit Depot San Diego</i>, until I left the Navy in 2016</p>
+
+        <p style="color:blueviolet; background:yellow">Within two years of rejoining the civilian world, I got married and had my daughter, <i>Evelyn</i>. Now I hope to develop the skills necessary to better support my family.</p>
     </body>
 </html>
