--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
-<html>
-    <head>
-        <title>Gabe Seabaugh</title>
-    </head>
-    <body style="background:brown">
-        <h1 style="color:black; background:burlywood">Gabe Seabaugh</h1>
-        <p style="color:white; background:green">I am a 26-year-old <b>veteran of the U.S. Navy</b> hailing from <i>Mohave Valley, Arizona.</i> I'm married with a <sup>one-year-old daughter,</sup> and I currently work in <sub>Private Security.</sub> I have had an interest in coding since high-school, and I am excited to have the opportunity to learn it while <mark>taking advantage of the G.I. Bill.</mark></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gabe</title>
+</head>
+<body>
+    <header>
+        <h1 style="color:blue; font-family:fantasy;">Software Developer</h1>
+        <p>Lake Havasu City, Arizona</p>
+        <p id="contact-btn">Contact Us</p>
+    </header>
 
-        <p style="color:brown; background:cornflowerblue">I was a <b>Hospital Corpsman</b> for 5 years, three of which having been spent stationed in <mark>Okinawa, Japan.</mark> I spent my time working for clinics and providing medical supervision to the Marines I was stationed with. My last year was spent taking care of the medical needs of the recruits sent to <i>Marine Corps Recruit Depot San Diego</i>, until I left the Navy in 2016</p>
+    <main style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+        <h2>Bio</h2>
+        <p>Lorem ipsum dolor <b>sit amet consectetur adipisicing elit.</b> Architecto unde, <i>nostrum eum atque animi ipsum eos accusantium quaerat.</i><strong> Alias ea asperiores totam tenetur velit similique officiis, aut quidem! Tenetur, repellat.</strong></p>
+    </main>
 
-        <p style="color:blueviolet; background:yellow">Within two years of rejoining the civilian world, I got married and had my daughter, <i>Evelyn</i>. Now I hope to develop the skills necessary to better support my family.</p>
-    </body>
+    <div>
+        <h2>Our Services</h2>
+
+        <h3>Web Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, beatae laborum. Dolorum illo iure ipsam praesentium suscipit labore excepturi minima, optio dolorem quos, aperiam quod harum, alias dolore accusamus totam.</p>
+
+        <h3>Mobile Apps</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium beatae laboriosam animi enim eaque harum nulla, sed facere dolore. Vero aliquam voluptas architecto? Eos numquam quod sunt amet voluptas aut?</p>
+
+        <h3>Social Media</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam explicabo quaerat perferendis alias autem officia perspiciatis dignissimos recusandae, amet molestias, adipisci animi pariatur! Qui odit inventore aspernatur, vel quos reprehenderit!</p>
+
+    </div>
+
+    <footer>
+        <p>Copyright reserved &copy; 2020 CGSEABAUGH</p>
+    </footer>
+</body>
 </html>
